Fixes to document correct external table behavior
Fixes to notebooks to take out that column order must be the same as remote table

--- a/sql2019workshop/sql2019wks/08_DataVirtualization/sqldatahub/azuredb/azuredbexternaltable.ipynb
+++ b/sql2019workshop/sql2019wks/08_DataVirtualization/sqldatahub/azuredb/azuredbexternaltable.ipynb
@@ -23,7 +23,9 @@
                 "\r\n",
                 "This notebook uses the sample WideWorldImporters sample database but can be used with any user database."
             ],
-            "metadata": {}
+            "metadata": {
+                "azdata_cell_guid": "412dfc1e-a714-4f01-aeb5-ef0dde626c7d"
+            }
         },
         {
             "cell_type": "markdown",
@@ -83,7 +85,9 @@
                 "GO```\r\n",
                 ""
             ],
-            "metadata": {}
+            "metadata": {
+                "azdata_cell_guid": "cd8d3616-4164-4a3c-9cbc-36dc2b82e34a"
+            }
         },
         {
             "cell_type": "markdown",
@@ -91,7 +95,9 @@
                 "## Step 1: Create a master key\r\n",
                 "Create a master key to encrypt the database credential"
             ],
-            "metadata": {}
+            "metadata": {
+                "azdata_cell_guid": "36f8b63f-f989-47fd-905f-7c5707e0f7fd"
+            }
         },
         {
             "cell_type": "code",
@@ -101,7 +107,9 @@
                 "CREATE MASTER KEY ENCRYPTION BY PASSWORD = '<password>'\r\n",
                 "GO"
             ],
-            "metadata": {},
+            "metadata": {
+                "azdata_cell_guid": "19a32a92-ec3f-49ae-aa3c-ea50a8a914b2"
+            },
             "outputs": [
                 {
                     "output_type": "display_data",
@@ -133,7 +141,9 @@
                 "## Step 2: Create a database credential.\r\n",
                 "The database credential contains the IDENTITY (login) and SECRET (password) of the remote Azure SQL Database server or Managed Instance. Change this to the login and password for your server."
             ],
-            "metadata": {}
+            "metadata": {
+                "azdata_cell_guid": "91f196a7-67f4-43cd-b7a7-943474c788b9"
+            }
         },
         {
             "cell_type": "code",
@@ -142,7 +152,9 @@
                 "WITH IDENTITY = '<login>', SECRET = '<password>'\r\n",
                 "GO"
             ],
-            "metadata": {},
+            "metadata": {
+                "azdata_cell_guid": "b2f1ec1e-6d76-4510-85fb-1a14c1989490"
+            },
             "outputs": [
                 {
                     "output_type": "display_data",
@@ -174,7 +186,9 @@
                 "\r\n",
                 "For this example, put in the name of the Azure SQL Server database server or Managed instance"
             ],
-            "metadata": {}
+            "metadata": {
+                "azdata_cell_guid": "4e9960e4-dc9a-47ab-8da1-468762a1b7ef"
+            }
         },
         {
             "cell_type": "code",
@@ -187,7 +201,9 @@
                 ")\r\n",
                 "GO"
             ],
-            "metadata": {},
+            "metadata": {
+                "azdata_cell_guid": "821a3725-a003-4f16-9c6e-a71df376eca3"
+            },
             "outputs": [
                 {
                     "output_type": "display_data",
@@ -212,7 +228,9 @@
                 "## Step 4: Create a schema for the EXTERNAL TABLE\r\n",
                 "Schemas provide convenient methods to secure and organize objects"
             ],
-            "metadata": {}
+            "metadata": {
+                "azdata_cell_guid": "479ab414-46f8-4844-967f-3bc958505ada"
+            }
         },
         {
             "cell_type": "code",
@@ -220,7 +238,9 @@
                 "CREATE SCHEMA azuresqldb\r\n",
                 "GO"
             ],
-            "metadata": {},
+            "metadata": {
+                "azdata_cell_guid": "3f8b9e0f-2cf3-4226-87c4-eee30f3a23ed"
+            },
             "outputs": [
                 {
                     "output_type": "display_data",
@@ -243,11 +263,13 @@
             "cell_type": "markdown",
             "source": [
                 "## Step 5: Create an EXTERNAL TABLE\r\n",
-                "An external table provides metadata so SQL Server knows how to map columns to the remote table. The name of the table for the external table can be your choice. But the columns must be specified in the same order with the same name as they are defined in the remote table. Furthermore, local data types must be compatible with the remote table.\r\n",
+                "An external table provides metadata so SQL Server knows how to map columns to the remote table. The name of the table for the external table can be your choice. But the columns must be specified with the same name as they are defined in the remote table. Furthermore, local data types must be compatible with the remote table.\r\n",
                 "\r\n",
                 "The WITH clause specifies a LOCATION. This LOCATION is different than the EXTERNAL DATA SOURCE. This LOCATION indicates the [database].[schema].[table] of the remote table. The DATA_SOURCE clauses is the name of the EXTERNAL DATA SOURCE you created earlier."
             ],
-            "metadata": {}
+            "metadata": {
+                "azdata_cell_guid": "f0224273-4579-4c7c-bdca-e8cacf7aa3d1"
+            }
         },
         {
             "cell_type": "code",
@@ -278,7 +300,9 @@
                 ")\r\n",
                 "GO"
             ],
-            "metadata": {},
+            "metadata": {
+                "azdata_cell_guid": "54154846-4eb6-445a-980b-17c2beaca255"
+            },
             "outputs": [
                 {
                     "output_type": "display_data",
@@ -303,7 +327,9 @@
                 "## Step 6: Create statistics\r\n",
                 "SQL Server allows you to store local statistics about specific columns from the remote table. This can help the query processing to make more efficient plan decisions."
             ],
-            "metadata": {}
+            "metadata": {
+                "azdata_cell_guid": "8be4b3b9-2284-45cb-9941-aadbb1d56ab1"
+            }
         },
         {
             "cell_type": "code",
@@ -311,7 +337,9 @@
                 "CREATE STATISTICS ModernStockItemsStats ON azuresqldb.ModernStockItems ([StockItemID]) WITH FULLSCAN\r\n",
                 "GO"
             ],
-            "metadata": {},
+            "metadata": {
+                "azdata_cell_guid": "1fe5ec9e-4b71-4598-a7f0-7d5631977e06"
+            },
             "outputs": [
                 {
                     "output_type": "display_data",
@@ -336,7 +364,9 @@
                 "## Step 7: Try to scan the remote table\r\n",
                 "Run a simple query on the EXTERNAL TABLE to scan all rows."
             ],
-            "metadata": {}
+            "metadata": {
+                "azdata_cell_guid": "2a56ae08-7d9b-49a6-b248-21fc58f4f3c9"
+            }
         },
         {
             "cell_type": "code",
@@ -344,7 +374,9 @@
                 "SELECT * FROM azuresqldb.ModernStockItems\r\n",
                 "GO"
             ],
-            "metadata": {},
+            "metadata": {
+                "azdata_cell_guid": "bb682367-ef18-4de6-9b97-6f663bd6df19"
+            },
             "outputs": [
                 {
                     "output_type": "display_data",
@@ -455,7 +487,9 @@
                 "## Step 8: Query the remote table with a WHERE clause\r\n",
                 "Even though the table may be small SQL Server will \"push\" the WHERE clause filter to the remote table"
             ],
-            "metadata": {}
+            "metadata": {
+                "azdata_cell_guid": "539c8798-1cfe-4892-911d-48a28b3b8db3"
+            }
         },
         {
             "cell_type": "code",
@@ -463,7 +497,9 @@
                 "SELECT * FROM azuresqldb.ModernStockItems WHERE StockItemID = 100000\r\n",
                 "GO"
             ],
-            "metadata": {},
+            "metadata": {
+                "azdata_cell_guid": "62972697-b63b-40af-9431-c413fc001996"
+            },
             "outputs": [
                 {
                     "output_type": "display_data",
@@ -574,7 +610,9 @@
                 "## Step 9: Join with local SQL Server tables\r\n",
                 "Use a UNION to find all stockitems for a specific supplier both locally and in the Azure table"
             ],
-            "metadata": {}
+            "metadata": {
+                "azdata_cell_guid": "2c39cabc-ccc7-465f-aae0-ff02b46824d6"
+            }
         },
         {
             "cell_type": "code",
@@ -596,7 +634,9 @@
                 "ON si.ColorID = c.ColorID\r\n",
                 "GO"
             ],
-            "metadata": {},
+            "metadata": {
+                "azdata_cell_guid": "bc07b1da-2ff8-4712-8685-40d5aef896a3"
+            },
             "outputs": [
                 {
                     "output_type": "display_data",
@@ -857,8 +897,12 @@
         },
         {
             "cell_type": "markdown",
-            "source": "",
-            "metadata": {}
+            "source": [
+                ""
+            ],
+            "metadata": {
+                "azdata_cell_guid": "914d355e-03f8-4317-b246-324b80f159a5"
+            }
         }
     ]
 }
