--- a/sql2019workshop/sql2019wks/08_DataVirtualization/sqldatahub/cosmosdb/cosmosdbexternaltable.ipynb
+++ b/sql2019workshop/sql2019wks/08_DataVirtualization/sqldatahub/cosmosdb/cosmosdbexternaltable.ipynb
@@ -23,7 +23,9 @@
                 "\r\n",
                 "This notebook uses the sample WideWorldImporters sample database but can be used with any user database."
             ],
-            "metadata": {}
+            "metadata": {
+                "azdata_cell_guid": "94dc5a40-ef57-4733-b53a-1dfcbe2ead58"
+            }
         },
         {
             "cell_type": "markdown",
@@ -47,7 +49,9 @@
                 "}\r\n",
                 "```"
             ],
-            "metadata": {}
+            "metadata": {
+                "azdata_cell_guid": "678fd495-dc2c-4986-94ff-49d4d3e80d8f"
+            }
         },
         {
             "cell_type": "markdown",
@@ -55,7 +59,9 @@
                 "## Step 1: Create a master key\r\n",
                 "Create a master key to encrypt the database credential"
             ],
-            "metadata": {}
+            "metadata": {
+                "azdata_cell_guid": "15cffd28-c5d1-428c-b1b7-9312c0bfc4a5"
+            }
         },
         {
             "cell_type": "code",
@@ -65,7 +71,9 @@
                 "CREATE MASTER KEY ENCRYPTION BY PASSWORD = '<password>'\r\n",
                 "GO"
             ],
-            "metadata": {},
+            "metadata": {
+                "azdata_cell_guid": "52585c08-4689-4b5f-bcf8-9434e7853053"
+            },
             "outputs": [
                 {
                     "output_type": "display_data",
@@ -97,7 +105,9 @@
                 "## Step 2: Create a database credential\r\n",
                 "Create the database scoped credentials with the Azure CosmosDB user and password. You can get the IDENTITY (user) and secret (password) from the Connection String option in the Azure portal"
             ],
-            "metadata": {}
+            "metadata": {
+                "azdata_cell_guid": "62ab9558-5fe0-4fb9-8046-e4631795d0a7"
+            }
         },
         {
             "cell_type": "code",
@@ -106,7 +116,9 @@
                 "WITH IDENTITY = '<user>', Secret = '<password>'\r\n",
                 "GO"
             ],
-            "metadata": {},
+            "metadata": {
+                "azdata_cell_guid": "e42b9c0f-1875-47cc-b8f1-2de488413692"
+            },
             "outputs": [
                 {
                     "output_type": "display_data",
@@ -138,7 +150,9 @@
                 "\r\n",
                 "For this example, create a data source for the Azure CosmoDB sderver using the host URI and port. The LOCATION is built from <HOST>:<PORT> from the Connection String in the Azure Portal"
             ],
-            "metadata": {}
+            "metadata": {
+                "azdata_cell_guid": "390ae534-1b64-44a2-9a41-68c1915e5ba1"
+            }
         },
         {
             "cell_type": "code",
@@ -151,7 +165,9 @@
                 ")\r\n",
                 "GO"
             ],
-            "metadata": {},
+            "metadata": {
+                "azdata_cell_guid": "85e81b03-6570-4cd1-ac59-bbe06154d6a1"
+            },
             "outputs": [
                 {
                     "output_type": "display_data",
@@ -176,7 +192,9 @@
                 "## Step 4: Create a schema for the EXTERNAL TABLE\r\n",
                 "Schemas provide convenient methods to secure and organize objects"
             ],
-            "metadata": {}
+            "metadata": {
+                "azdata_cell_guid": "312f8c6e-f364-4cae-be9d-329dfe88bff2"
+            }
         },
         {
             "cell_type": "code",
@@ -184,7 +202,9 @@
                 "CREATE SCHEMA cosmosdb\r\n",
                 "GO"
             ],
-            "metadata": {},
+            "metadata": {
+                "azdata_cell_guid": "1e134575-6506-4b19-835b-c226653b8ae9"
+            },
             "outputs": [
                 {
                     "output_type": "display_data",
@@ -207,11 +227,13 @@
             "cell_type": "markdown",
             "source": [
                 "## Step 5: Create an EXTERNAL TABLE\r\n",
-                "An external table provides metadata so SQL Server knows how to map columns to the remote table. The name of the table for the external table can be your choice. But the columns must be specified in the same order with the same name as they are defined in the remote table. Furthermore, local data types must be compatible with the remote table.\r\n",
+                "An external table provides metadata so SQL Server knows how to map columns to the remote table. The name of the table for the external table can be your choice. But the columns must be specified with the same name as they are defined in the remote table. Furthermore, local data types must be compatible with the remote table.\r\n",
                 "\r\n",
                 "Create the external table to match the Azure CosmosDB document. The WITH clause specifies a LOCATION. This LOCATION is different than the EXTERNAL DATA SOURCE. The LOCATION is the CosmosDB database and collection."
             ],
-            "metadata": {}
+            "metadata": {
+                "azdata_cell_guid": "d8b61725-50e9-43c3-8da2-e9f4d99fac79"
+            }
         },
         {
             "cell_type": "code",
@@ -234,7 +256,9 @@
                 ")\r\n",
                 "GO"
             ],
-            "metadata": {},
+            "metadata": {
+                "azdata_cell_guid": "50c7ad4f-bded-4ede-8404-9a0d8ef8c253"
+            },
             "outputs": [
                 {
                     "output_type": "display_data",
@@ -259,7 +283,9 @@
                 "## Step 6: Create statistics\r\n",
                 "SQL Server allows you to store local statistics about specific columns from the remote table. This can help the query processing to make more efficient plan decisions."
             ],
-            "metadata": {}
+            "metadata": {
+                "azdata_cell_guid": "56e86b58-f275-48bf-ae46-bcf98a432e7c"
+            }
         },
         {
             "cell_type": "code",
@@ -267,7 +293,9 @@
                 "CREATE STATISTICS CosmosDBOrderSalesPersonStats ON cosmosdb.Orders ([SalesPersonPersonID]) WITH FULLSCAN\r\n",
                 "GO"
             ],
-            "metadata": {},
+            "metadata": {
+                "azdata_cell_guid": "aaa8950d-da30-4691-a10c-5645f688688c"
+            },
             "outputs": [
                 {
                     "output_type": "display_data",
@@ -292,7 +320,9 @@
                 "## Step 7: Try to scan the remote table\r\n",
                 "Run a simple query on the EXTERNAL TABLE to scan all rows."
             ],
-            "metadata": {}
+            "metadata": {
+                "azdata_cell_guid": "2a0cd685-98c4-4a30-84c8-106ad7882264"
+            }
         },
         {
             "cell_type": "code",
@@ -300,7 +330,9 @@
                 "SELECT * FROM cosmosdb.Orders\r\n",
                 "GO"
             ],
-            "metadata": {},
+            "metadata": {
+                "azdata_cell_guid": "947368be-f370-4f9a-a39f-ca440a32f8f4"
+            },
             "outputs": [
                 {
                     "output_type": "display_data",
@@ -379,7 +411,9 @@
                 "## Step 8: Query the remote table with a WHERE clause\r\n",
                 "Even though the table may be small SQL Server will \"push\" the WHERE clause filter to the remote table"
             ],
-            "metadata": {}
+            "metadata": {
+                "azdata_cell_guid": "3409e8ac-49b4-4e97-85bc-349f67aaf042"
+            }
         },
         {
             "cell_type": "code",
@@ -387,7 +421,9 @@
                 "SELECT * FROM cosmosdb.Orders WHERE SalesPersonPersonID = 2\r\n",
                 "GO"
             ],
-            "metadata": {},
+            "metadata": {
+                "azdata_cell_guid": "2b3a9bfa-7269-452a-b968-545cf0314a30"
+            },
             "outputs": [
                 {
                     "output_type": "display_data",
@@ -466,7 +502,9 @@
                 "## Step 9: Join with local SQL Server tables\r\n",
                 "Find out the name of the salesperson and which customer they worked with to test out the new mobile app experience."
             ],
-            "metadata": {}
+            "metadata": {
+                "azdata_cell_guid": "735f001b-8067-4465-a80a-d1a34324c6b7"
+            }
         },
         {
             "cell_type": "code",
@@ -477,7 +515,9 @@
                 "ON o.SalesPersonPersonID = p.PersonID\r\n",
                 "GO"
             ],
-            "metadata": {},
+            "metadata": {
+                "azdata_cell_guid": "dbf869ac-1969-4c50-bd82-215038da238f"
+            },
             "outputs": [
                 {
                     "output_type": "display_data",
@@ -532,8 +572,12 @@
         },
         {
             "cell_type": "markdown",
-            "source": "",
-            "metadata": {}
+            "source": [
+                ""
+            ],
+            "metadata": {
+                "azdata_cell_guid": "8d86be35-d207-434a-9cdb-06962ee44dc8"
+            }
         }
     ]
 }
