--- a/sql2019workshop/sql2019wks/08_DataVirtualization/sqldatahub/oracle/oracleexternaltable.ipynb
+++ b/sql2019workshop/sql2019wks/08_DataVirtualization/sqldatahub/oracle/oracleexternaltable.ipynb
@@ -23,7 +23,9 @@
                 "\r\n",
                 "This notebook uses the sample WideWorldImporters sample database but can be used with any user database."
             ],
-            "metadata": {}
+            "metadata": {
+                "azdata_cell_guid": "147beac9-2a35-4585-8def-a53b088e5dbf"
+            }
         },
         {
             "cell_type": "markdown",
@@ -65,7 +67,9 @@
                 "INSERT INTO gl.accountsreceivable VALUES (1, TO_DATE('05/31/2016', 'MM/DD/YYYY'), 'Invoice 70510', 336252, 5549.90);\r\n",
                 "```"
             ],
-            "metadata": {}
+            "metadata": {
+                "azdata_cell_guid": "eb0a7e62-672a-4dfc-bc29-3cce016102e6"
+            }
         },
         {
             "cell_type": "markdown",
@@ -73,7 +77,9 @@
                 "## Step 1: Create a master key\r\n",
                 "Create a master key to encrypt the database credential"
             ],
-            "metadata": {}
+            "metadata": {
+                "azdata_cell_guid": "365c89c0-1b2e-45ca-9d2a-ea1cf9c46d88"
+            }
         },
         {
             "cell_type": "code",
@@ -83,7 +89,9 @@
                 "CREATE MASTER KEY ENCRYPTION BY PASSWORD = '<password>'\r\n",
                 "GO"
             ],
-            "metadata": {},
+            "metadata": {
+                "azdata_cell_guid": "85058862-d544-497e-a76f-5de4a611476c"
+            },
             "outputs": [
                 {
                     "output_type": "display_data",
@@ -115,7 +123,9 @@
                 "## Step 2: Create a database credential.\r\n",
                 "The database credential contains the IDENTITY (login) and SECRET (password) of Oracle instance. Change this to the login and password created in Step 0."
             ],
-            "metadata": {}
+            "metadata": {
+                "azdata_cell_guid": "fd26fb13-44bb-4386-a575-c7eb2749cc91"
+            }
         },
         {
             "cell_type": "code",
@@ -124,7 +134,9 @@
                 "WITH IDENTITY = 'gl', SECRET = '<password>'\r\n",
                 "GO"
             ],
-            "metadata": {},
+            "metadata": {
+                "azdata_cell_guid": "7fdf7457-351c-4df5-8ae3-e0db782a3a22"
+            },
             "outputs": [
                 {
                     "output_type": "display_data",
@@ -156,7 +168,9 @@
                 "\r\n",
                 "For this example, put IP address or hostname of the Oracle instance and port number"
             ],
-            "metadata": {}
+            "metadata": {
+                "azdata_cell_guid": "9f9115d5-e8d2-432b-8b03-39868142f2d4"
+            }
         },
         {
             "cell_type": "code",
@@ -169,7 +183,9 @@
                 ")\r\n",
                 "GO"
             ],
-            "metadata": {},
+            "metadata": {
+                "azdata_cell_guid": "c60f2b44-8bb8-471e-8908-567b4c9c7f2a"
+            },
             "outputs": [
                 {
                     "output_type": "display_data",
@@ -194,7 +210,9 @@
                 "## Step 4: Create a schema for the EXTERNAL TABLE\r\n",
                 "Schemas provide convenient methods to secure and organize objects"
             ],
-            "metadata": {}
+            "metadata": {
+                "azdata_cell_guid": "e96bc697-7962-489b-8557-a54f6f322482"
+            }
         },
         {
             "cell_type": "code",
@@ -202,7 +220,9 @@
                 "CREATE SCHEMA oracle\r\n",
                 "GO"
             ],
-            "metadata": {},
+            "metadata": {
+                "azdata_cell_guid": "d72787a8-f8be-42f6-ac45-78e8d50d3bf8"
+            },
             "outputs": [
                 {
                     "output_type": "display_data",
@@ -225,13 +245,15 @@
             "cell_type": "markdown",
             "source": [
                 "## Step 5: Create an EXTERNAL TABLE\r\n",
-                "An external table provides metadata so SQL Server knows how to map columns to the remote table. The name of the tables for the external table can be your choice. But the columns must be specified in the same order with the same name as they are defined in the remote table. Furthermore, local data types must be compatible with the remote table.\r\n",
+                "An external table provides metadata so SQL Server knows how to map columns to the remote table. The name of the tables for the external table can be your choice. But the columns must be specified with the same name as they are defined in the remote table. Furthermore, local data types must be compatible with the remote table.\r\n",
                 "\r\n",
                 "The WITH clause specifies a LOCATION. This LOCATION is different than the EXTERNAL DATA SOURCE. For Oracle, this LOCATION indicates the [instance].[schema].[table] of the Oracle table. The DATA_SOURCE clauses is the name of the EXTERNAL DATA SOURCE you created earlier.\r\n",
                 "\r\n",
                 "For Oracle, the LOCATION needs to be UPPERCASE. The column names must match the target data source. The column names must be UPPERCASE for Oracle in the table definition but not when you reference them."
             ],
-            "metadata": {}
+            "metadata": {
+                "azdata_cell_guid": "54e0970f-94f0-407f-ac5a-94cc1fa780be"
+            }
         },
         {
             "cell_type": "code",
@@ -250,7 +272,9 @@
                 ")\r\n",
                 "GO"
             ],
-            "metadata": {},
+            "metadata": {
+                "azdata_cell_guid": "261f8d5c-fbf6-4887-8599-33d2ba143164"
+            },
             "outputs": [
                 {
                     "output_type": "display_data",
@@ -275,7 +299,9 @@
                 "## Step 6: Create statistics\r\n",
                 "SQL Server allows you to store local statistics about specific columns from the remote table. This can help the query processing to make more efficient plan decisions."
             ],
-            "metadata": {}
+            "metadata": {
+                "azdata_cell_guid": "739a3f30-1e40-4a25-9013-e160fa214161"
+            }
         },
         {
             "cell_type": "code",
@@ -283,7 +309,9 @@
                 "CREATE STATISTICS arrefstats ON oracle.accountsreceivable ([arref]) WITH FULLSCAN\r\n",
                 "GO"
             ],
-            "metadata": {},
+            "metadata": {
+                "azdata_cell_guid": "cfed3f01-1acc-4592-b1fd-58317d23aed5"
+            },
             "outputs": [
                 {
                     "output_type": "display_data",
@@ -308,7 +336,9 @@
                 "## Step 7: Try to scan the remote table\r\n",
                 "Run a simple query on the EXTERNAL TABLE to scan all rows."
             ],
-            "metadata": {}
+            "metadata": {
+                "azdata_cell_guid": "8aab6d75-02b9-49fc-ab17-77b97893dfbd"
+            }
         },
         {
             "cell_type": "code",
@@ -316,7 +346,9 @@
                 "SELECT * FROM oracle.accountsreceivable\r\n",
                 "GO"
             ],
-            "metadata": {},
+            "metadata": {
+                "azdata_cell_guid": "6f8ae832-c11f-43aa-a299-8fe735d1d2a2"
+            },
             "outputs": [
                 {
                     "output_type": "display_data",
@@ -379,7 +411,9 @@
                 "## Step 8: Query the remote table with a WHERE clause\r\n",
                 "Even though the table may be small SQL Server will \"push\" the WHERE clause filter to the remote table"
             ],
-            "metadata": {}
+            "metadata": {
+                "azdata_cell_guid": "973910ea-8034-4fa9-afa6-65c3ebff0b42"
+            }
         },
         {
             "cell_type": "code",
@@ -388,7 +422,9 @@
                 "WHERE arref = 336252\r\n",
                 "GO"
             ],
-            "metadata": {},
+            "metadata": {
+                "azdata_cell_guid": "61274b71-359c-4aa7-be62-c6d176589b37"
+            },
             "outputs": [
                 {
                     "output_type": "display_data",
@@ -451,7 +487,9 @@
                 "## Step 9: Join with local SQL Server tables\r\n",
                 "Find accts receivable data based on CustomerTransactionID (which matches arref in the AR tables in Oracle)"
             ],
-            "metadata": {}
+            "metadata": {
+                "azdata_cell_guid": "3ea9cc6f-2c77-478b-a2fe-3d2b30dd019c"
+            }
         },
         {
             "cell_type": "code",
@@ -462,7 +500,9 @@
                 "ON oa.arref = ct.CustomerTransactionID\r\n",
                 "GO"
             ],
-            "metadata": {},
+            "metadata": {
+                "azdata_cell_guid": "c4cf75c8-de96-4402-8814-89f69e351667"
+            },
             "outputs": [
                 {
                     "output_type": "display_data",
@@ -565,8 +605,12 @@
         },
         {
             "cell_type": "markdown",
-            "source": "",
-            "metadata": {}
+            "source": [
+                ""
+            ],
+            "metadata": {
+                "azdata_cell_guid": "a5c4199f-c62b-43ee-bfd5-8d635706e032"
+            }
         }
     ]
 }
