refactoring folder structure

--- a/AzureSQLWorkshop/azuresqlworkshop/01-IntroToAzureSQL/verifydeployment/VerifyDeployment-SS.ipynb
+++ b/AzureSQLWorkshop/azuresqlworkshop/01-IntroToAzureSQL/verifydeployment/VerifyDeployment-SS.ipynb
@@ -27,7 +27,7 @@
                 "\r\n",
                 "**Set up - Attach the notebook to SQL Server**   \r\n",
                 "\r\n",
-                "0. You should have opened this file using Azure Data Studio. If you didn't, please refer to Module 1 Activity 3 in the readme.md file to get set up.  \r\n",
+                "0. You should have opened this file using Azure Data Studio. If you didn't, please refer to Module 1 Activity 3 in the main Module 1 file to get set up.  \r\n",
                 "1. In the bar at the top of this screen, confirm or change the \"Kernel\" to **SQL**. This determines what language the code blocks in the file are. In this case, that language is SQL.  \r\n",
                 "2. For \"Attach to\", use the drop-down to select **Change Connection**. From the Recent Connections pane, you should be able to select your local SQL Server instance.  \r\n",
                 "\r\n",
@@ -5771,6 +5771,15 @@
             ],
             "metadata": {
                 "azdata_cell_guid": "abbfc233-5ec9-40c1-8732-ea669f715f07"
+            }
+        },
+        {
+            "cell_type": "markdown",
+            "source": [
+                ""
+            ],
+            "metadata": {
+                "azdata_cell_guid": "b78d02fa-0f5e-4938-80f9-d87b4e98d83c"
             }
         },
         {
