--- a/AzureSQLWorkshop/azuresqlworkshop/01-IntroToAzureSQL/verifydeployment/VerifyDeployment.ipynb
+++ b/AzureSQLWorkshop/azuresqlworkshop/01-IntroToAzureSQL/verifydeployment/VerifyDeployment.ipynb
@@ -27,7 +27,7 @@
                 "\r\n",
                 "**Set up - Attach the notebook to Azure SQL Database**   \r\n",
                 "\r\n",
-                "0. You should have opened this file using Azure Data Studio. If you didn't, please refer to Module 1 Activity 3 in the readme.md file to get set up.  \r\n",
+                "0. You should have opened this file using Azure Data Studio. If you didn't, please refer to Module 1 Activity 3 in the main Module 1 file to get set up.  \r\n",
                 "1. In the bar at the top of this screen, confirm or change the \"Kernel\" to **SQL**. This determines what language the code blocks in the file are. In this case, that language is SQL.  \r\n",
                 "2. For \"Attach to\", use the drop-down to select **Change Connection**. From the Recent Connections pane, you should be able to select your Azure SQL Database logical server.  \r\n",
                 "\r\n",
@@ -15564,6 +15564,15 @@
             ],
             "metadata": {
                 "azdata_cell_guid": "abbfc233-5ec9-40c1-8732-ea669f715f07"
+            }
+        },
+        {
+            "cell_type": "markdown",
+            "source": [
+                "TODO: Should we add a compressed table version of the \"Configure SQL Server\" from Bob's notes here? Otherwise we don't cover that sp_configure, ALTER SERVER, tempdb config, etc. aren't supported / other things"
+            ],
+            "metadata": {
+                "azdata_cell_guid": "8c0a681d-9986-4ab8-b262-8d5f969525c3"
             }
         },
         {
