expand deploy and configure module

--- a/AzureSQLWorkshop/azuresqlworkshop/02-DeployAndConfigure/cli/AzureCli.ipynb
+++ b/AzureSQLWorkshop/azuresqlworkshop/02-DeployAndConfigure/cli/AzureCli.ipynb
@@ -19,7 +19,7 @@
             "source": [
                 "# Activity 4: Azure CLI - Azure SQL Database\r\n",
                 "\r\n",
-                "#### <i>The Azure SQL Workshop - Module 1</i>\r\n",
+                "#### <i>The Azure SQL Workshop - Module 2</i>\r\n",
                 "\r\n",
                 "<p style=\"border-bottom: 1px solid lightgrey;\"></p>\r\n",
                 "\r\n",
@@ -28,7 +28,7 @@
                 "\r\n",
                 "**Set up**   \r\n",
                 "\r\n",
-                "0. You should have opened this file using Azure Data Studio. If you didn't, please refer to Module 1 Activity 3 in the readme.md file to get set up.  \r\n",
+                "0. You should have opened this file using Azure Data Studio. If you didn't, please refer to Module 2 Activity 3 in the readme.md file to get set up.  \r\n",
                 "1. In the bar at the top of this screen, confirm or change the \"Kernel\" to **PowerShell**. This determines what language the code blocks in the file are. In this case, that language is SQL.  \r\n",
                 "2. You may be prompted to install Python, if you are select **New Python Installation**. This may take a few minutes, you'll see the output in a window that appears at the bottom of ADS.\r\n",
                 "TODO THIS TAKES ~5 minutes. \r\n",
@@ -50,7 +50,8 @@
                 "az login"
             ],
             "metadata": {
-                "azdata_cell_guid": "12d396b2-92c4-483b-a741-b9aa84807d29"
+                "azdata_cell_guid": "12d396b2-92c4-483b-a741-b9aa84807d29",
+                "tags": []
             },
             "outputs": [],
             "execution_count": 1
@@ -141,9 +142,9 @@
             },
             "outputs": [
                 {
+                    "output_type": "stream",
                     "name": "stdout",
-                    "text": "[\n  {\n    \"currentValue\": 29360128.0,\n    \"displayName\": \"Database Size\",\n    \"limit\": 34359738368.0,\n    \"name\": \"database_size\",\n    \"nextResetTime\": null,\n    \"resourceName\": \"AdventureWorks0406\",\n    \"unit\": \"Bytes\"\n  },\n  {\n    \"currentValue\": 33554432.0,\n    \"displayName\": \"Database Allocated Size\",\n    \"limit\": 34359738368.0,\n    \"name\": \"database_allocated_size\",\n    \"nextResetTime\": null,\n    \"resourceName\": \"AdventureWorks0406\",\n    \"unit\": \"Bytes\"\n  }\n]\n",
-                    "output_type": "stream"
+                    "text": "[\n  {\n    \"currentValue\": 29360128.0,\n    \"displayName\": \"Database Size\",\n    \"limit\": 34359738368.0,\n    \"name\": \"database_size\",\n    \"nextResetTime\": null,\n    \"resourceName\": \"AdventureWorks0406\",\n    \"unit\": \"Bytes\"\n  },\n  {\n    \"currentValue\": 33554432.0,\n    \"displayName\": \"Database Allocated Size\",\n    \"limit\": 34359738368.0,\n    \"name\": \"database_allocated_size\",\n    \"nextResetTime\": null,\n    \"resourceName\": \"AdventureWorks0406\",\n    \"unit\": \"Bytes\"\n  }\n]\n"
                 }
             ],
             "execution_count": 7
