--- a/AzureSQLWorkshop/azuresqlworkshop/02-DeployAndConfigure/loaddata/LoadData.ipynb
+++ b/AzureSQLWorkshop/azuresqlworkshop/02-DeployAndConfigure/loaddata/LoadData.ipynb
@@ -189,7 +189,7 @@
             "source": [
                 "CREATE DATABASE SCOPED CREDENTIAL [https://azuresqlworkshopsa.blob.core.windows.net/data/]\r\n",
                 "WITH IDENTITY = 'SHARED ACCESS SIGNATURE',\r\n",
-                "SECRET = 'sv=2019-02-02&ss=bfqt&srt=sco&sp=rcp&se=2025-01-23T00:09:52Z&st=2020-01-22T16:09:52Z&spr=https&sig=Ro98PLwsmMqBsH9T1UUAzqxM3KJJLKFLshRlnfLYnBI%3D';"
+                "SECRET = 'sp=redacted';"
             ],
             "metadata": {
                 "azdata_cell_guid": "26c0a508-595d-4ead-a680-b8ea422a8d68"
